--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/styles.rtl.css
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/styles.rtl.css
@@ -841,6 +841,7 @@ label, label + * {
 }
 
 .header-logo {
+  display: none !important;
 	margin: 0 0 20px;
 	text-align: center;
 }
@@ -7489,4 +7490,8 @@ pre {
     max-width: 100%;
 }
 
+}
+
+.currency-selector {
+  display: none !important;
 }
